# Algorithm-offline-sdk

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakePresets_backup.json  Dependencies.cmake  README.md  build11.sh  build8.sh  sh.exe.stackdump
cmake/: ArmToolchain.cmake  Armv7Toolchain.cmake  GXBoost.cmake  GXCCXXRuntime.cmake  GXCompat.cmake  GXEmscripten.cmake  GXOpenSSL.cmake  GXPackaging.cmake  GXThirdPartyLibrary.cmake  GXUtil.cmake  NDKToolchain.cmake  RV1106Toolchain.cmake  RV1109Toolchain.cmake  RV3588Toolchain.cmake
cmake/camera_occlusion/: CMakeLists.txt
cmake/gx_api/: CMakeLists.txt
cmake/pump_weld/: CMakeLists.txt
config/: action_live.json  (+46 more)
config-windows-backup/: action_live.json  blur.json  configure_directory.json  detect.json  feature.json
demo/: CMakeLists.txt  compat.hpp  demo.cpp  demo.hpp
display/: CMakeLists.txt  display.cpp
display/mpp/: common_types.hpp  frame_info.hpp  image_converter.hpp  image_info.hpp  media.hpp  raw_packet_reader.hpp  video_decoder.hpp
restruct_test/: CMakeLists.txt  nessus.cpp
src/: CMakeLists.txt  GxOfflineFaceRecognitionConfig.cmake.in  GxOfflineRecognitionConfig.cmake.in  SdkShare.cpp  SdkShare.hpp  ThreadPool.hpp  config.cpp  config.hpp  config_validation.hpp  cpu.cpp  cpu.hpp  data_time.hpp  distance.cpp  distance.hpp  gx_api.cpp  gx_api_c.cpp  gx_batterypilferers_api.cpp  gx_camera_occlusion_api.cpp  gx_climb_api.cpp  gx_climb_pedestrian_api.cpp  gx_climb_tumble_pedestrian_api.cpp  gx_crossing_api.cpp  gx_crowd_api.cpp  gx_face_api.cpp  gx_face_api_c.cpp  gx_fighting_api.cpp  gx_flame_api.cpp  gx_head_api.cpp  gx_helmet_api.cpp  gx_leavepost_api.cpp  gx_onphone_api.cpp  gx_palyphone_api.cpp  gx_pedestrian_api.cpp  gx_pedestrian_labor_api.cpp  gx_pedestrian_min_api.cpp  gx_policeuniform_api.cpp  gx_posture_api.cpp  gx_pump_cover_plate_api.cpp  gx_pump_gate_status_api.cpp  gx_pump_glove_api.cpp  (+26 more)
src/batterypilferers/: config.cpp  config.hpp  gx_batterypilferers_api.cpp  gx_fighting_api.cpp  struct_reflection.hpp
src/camera_occlusion/: config.cpp  config.hpp  gx_camera_occlusion_api.cpp  struct_reflection.hpp
src/climb/: config.cpp  config.hpp  gx_climb_api.cpp  struct_reflection.hpp
src/climb_tumble_pedestrian/: config.cpp  config.hpp  gx_climb_tumble_pedestrian_api.cpp  struct_reflection.hpp
src/compat/: rv1106.cpp  rv3588.cpp
src/crossing/: config.cpp  config.hpp  gx_crossing_api.cpp  struct_reflection.hpp
src/crowd/: config.cpp  config.hpp  gx_crowd_api.cpp  struct_reflection.hpp
src/decode/: decode.hpp
src/distance/: cpu.cpp  distance.cpp  distance.hpp
src/falme/: gx_flame_api.cpp
src/fighting/: config.cpp  config.hpp  gx_fighting_api.cpp  struct_reflection.hpp
src/flame/: config.cpp  config.hpp  gx_flame_api.cpp  struct_reflection.hpp
src/gx_api/: gx_api.cpp
src/head/: config.cpp  config.hpp  gx_head_api.cpp  struct_reflection.hpp
src/helmet/: config.cpp  config.hpp  gx_helmet_api.cpp  struct_reflection.hpp
src/leavepost/: config.cpp  config.hpp  gx_leavepost_api.cpp  struct_reflection.hpp
src/nessus/: CMakeLists.txt  common_protocols.cpp  common_protocols.hpp  protocol.cpp  protocol.hpp  protocol_object.hpp
src/nessus/compat/: rv1109.cpp
src/nessus/protocols/: batterypilferers.hpp  cassius.hpp  climb.hpp  climb_pedestrian.hpp  climb_tumble_pedestrian.hpp  crossing.hpp  crowd.hpp  damocles.hpp  dummy.cpp  face_attributes.hpp  face_info.hpp  fighting.hpp  flame.hpp  gungnir.hpp  head.hpp  helmet.hpp  irisivel.hpp  irisviel.hpp  leavepost.hpp  longinus.hpp  onphone.hpp  pedestrian.hpp  pedestrian_labor.hpp  pedestrian_min.hpp  playphone.hpp  policeuniform.hpp  posture.hpp  pump_cover_plate.hpp  pump_gate_status.hpp  pump_glove.hpp  pump_hoisting.hpp  pump_light.hpp  pump_mask.hpp  pump_protect_face.hpp  pump_pumptop_person.hpp  pump_vesthelmet.hpp  pump_weld.hpp  pump_work_status.hpp  pumptop_helmet.hpp  refvest.hpp  (+12 more)
src/onphone/: config.cpp  config.hpp  gx_onphone_api.cpp  struct_reflection.hpp
src/pedestrian/: config.cpp  config.hpp  gx_pedestrian_api.cpp  struct_reflection.hpp
src/pedestrian_min/: config.cpp  config.hpp  gx_pedestrian_min_api.cpp  struct_reflection.hpp
src/playphone/: config.cpp  config.hpp  gx_playphone_api.cpp  struct_reflection.hpp
src/posture/: config.cpp  config.hpp  gx_posture_api.cpp  struct_reflection.hpp
src/pump_gate_status/: config.cpp  config.hpp  gx_pump_gate_status_api.cpp  struct_reflection.hpp
src/pump_hoisting/: config.cpp  config.hpp  gx_pump_hoisting_api.cpp  struct_reflection.hpp
src/pump_light/: config.cpp  config.hpp  gx_pump_light_api.cpp  struct_reflection.hpp
src/pump_mask/: config.cpp  config.hpp  gx_pump_mask_api.cpp  struct_reflection.hpp
src/pump_pumptop_person/: config.cpp  config.hpp  gx_pump_pumptop_person_api.cpp  struct_reflection.hpp
src/pump_vesthelmet/: config.cpp  config.hpp  gx_pump_vesthelmet_api.cpp  struct_reflection.hpp
src/pump_weld/: config.cpp  config.hpp  gx_pump_weld_api.cpp  struct_reflection.hpp
src/pump_work_status/: config.cpp  config.hpp  gx_pump_work_status_api.cpp  struct_reflection.hpp
src/pumptop_helmet/: config.cpp  config.hpp  gx_pumptop_helmet_api.cpp  struct_reflection.hpp
src/refvest/: config.cpp  config.hpp  gx_refvest_api.cpp  struct_reflection.hpp
src/sleep/: config.cpp  config.hpp  gx_smog_api.cpp  struct_reflection.hpp
src/smog/: config.cpp  config.hpp  gx_smog_api.cpp  struct_reflection.hpp
src/smoke/: config.cpp  config.hpp  gx_smoke_api.cpp  struct_reflection.hpp
src/tumble/: config.cpp  config.hpp  gx_tumble_api.cpp  struct_reflection.hpp
src/util/: CMakeLists.txt
src/vehicle/: config.cpp  config.hpp  gx_vehicle_api.cpp  struct_reflection.hpp
src/wander/: config.cpp  config.hpp  gx_wander_api.cpp  struct_reflection.hpp
src/workcloth/: config.cpp  config.hpp  gx_workcloth_api.cpp  struct_reflection.hpp
test/: CMakeLists.txt  common.hpp  config.cpp  config.hpp  face.cpp  head_require.h  nessus.cpp  police.cpp  rk3588_test.cpp  sophon.cpp  sophon_test.cpp  test.cpp  test_power.cpp  time_test.cpp
(+130 files in other folders)
